# encyclopedia

./: Demonstration_for_OA_week_NYIT.ipynb  HOME_PAGE.md  Keyword_extraction.py  README.md  TRANSCRIPT_PROCESSING_README.md  encyclopedia.py  my_encyclopedia.html  paper.md  publish.yml  pytest.ini  requirements.txt  setup.py
CAbook_encyclopedia/: All3088_CAbook_words.txt
Dictionary/: README.md  top_keywords.csv  top_keywords_only.txt  wg2_ch07_text.txt
Examples/: README_create_encyclopedia.md  README_example.md  __init__.py  browser_example.py  create_encyclopedia_from_wordlist.py  encyclopedia_structure_overview.dot  example_wordlist.txt  keyword_demo.txt  knowledge_graph_encyclopedia.html  preview_link.md  simple_encyclopedia_example.html  solvent_reagentToxicity.html
Keyword_extraction/: Keyword_extraction.py  README.md  classification.py  climateword_classification.py  html_to_text.py  html_to_txt.py  hybridclassification.py  requirements.txt  requirements_cleanup_summary.md  requirements_minimal.txt  requirements_optimized.txt  wikidata_cache.json  wikidata_cache.pkl  workflow.dot  workflow.md  workflow1.dot  wrapper.py
demonstration/: usecase1.ipynb
demostration/: demostration.ipynb
docs/: STYLE_GUIDE.md  (+26 more)
txt2phrases/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
txt2phrases/.github/.workflows/: publish.yml
txt2phrases/txt2phrases/: __init__.py  classify_specific.py  cli.py  html2txt.py  keyword.py  pdf2txt.py  pygetpaper.py
txt2phrases/txt2phrases.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+411 files in other folders)
