[metadata]
name = txt2phrases
version = 0.1.0
author = Udita Agawal
author_email = udita20agarwal@example.com
maintainer = Renu Kumari
maintainer_email = rk_2013@nipgr.ac.in
description = A Python library for HTML to TXT conversion, keyword extraction, and TF-IDF-based per-chapter classification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/semanticClimate/encyclopedia/tree/main/txt2phrases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    beautifulsoup4
    pandas
    tqdm
    transformers
    scikit-learn

[options.entry_points]
console_scripts =
    html2txt = txt2phrases.html2txt:main
    extract_keywords = txt2phrases.keyword:main
    specific_keywords = txt2phrases.classify_specific:main
